gen/ClassSchedulingParser.java
// Generated from D:/Project/tesgrammarantlr\ClassScheduling.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ClassSchedulingParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, LOWERCASE=11, UPPERCASE=12, DIGIT=13, NUMERIC=14, WORD=15, ALPHANUMERIC=16, 
		WHITESPACE=17, ENTER=18;
	public static final int
		RULE_main = 0, RULE_command = 1, RULE_createCourse = 2, RULE_course = 3, 
		RULE_courseID = 4, RULE_courseName = 5, RULE_lecturerID = 6, RULE_lecturerName = 7, 
		RULE_createLecturer = 8, RULE_lecturer = 9, RULE_preference = 10, RULE_daytime = 11, 
		RULE_day = 12, RULE_times = 13, RULE_time = 14, RULE_from = 15, RULE_to = 16, 
		RULE_createRoom = 17, RULE_room = 18, RULE_roomID = 19, RULE_facilities = 20, 
		RULE_facility = 21, RULE_capacity = 22;
	public static final String[] ruleNames = {
		"main", "command", "createCourse", "course", "courseID", "courseName", 
		"lecturerID", "lecturerName", "createLecturer", "lecturer", "preference", 
		"daytime", "day", "times", "time", "from", "to", "createRoom", "room", 
		"roomID", "facilities", "facility", "capacity"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'CREATE CLASS {'", "'}'", "'('", "','", "')'", "'CREATE LECTURER {'", 
		"'['", "']'", "'-'", "'CREATE ROOM {'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "LOWERCASE", 
		"UPPERCASE", "DIGIT", "NUMERIC", "WORD", "ALPHANUMERIC", "WHITESPACE", 
		"ENTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ClassScheduling.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ClassSchedulingParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<TerminalNode> ENTER() { return getTokens(ClassSchedulingParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(ClassSchedulingParser.ENTER, i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				command();
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ENTER) {
					{
					setState(47);
					match(ENTER);
					}
				}

				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__9))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CreateRoomContext createRoom() {
			return getRuleContext(CreateRoomContext.class,0);
		}
		public CreateLecturerContext createLecturer() {
			return getRuleContext(CreateLecturerContext.class,0);
		}
		public CreateCourseContext createCourse() {
			return getRuleContext(CreateCourseContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				createRoom();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				createLecturer();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				createCourse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateCourseContext extends ParserRuleContext {
		public List<TerminalNode> ENTER() { return getTokens(ClassSchedulingParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(ClassSchedulingParser.ENTER, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(ClassSchedulingParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(ClassSchedulingParser.WHITESPACE, i);
		}
		public List<CourseContext> course() {
			return getRuleContexts(CourseContext.class);
		}
		public CourseContext course(int i) {
			return getRuleContext(CourseContext.class,i);
		}
		public CreateCourseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createCourse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterCreateCourse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitCreateCourse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitCreateCourse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateCourseContext createCourse() throws RecognitionException {
		CreateCourseContext _localctx = new CreateCourseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createCourse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__0);
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				match(ENTER);
				setState(61);
				match(WHITESPACE);
				setState(62);
				course();
				setState(64);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(63);
					match(ENTER);
					}
					break;
				}
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENTER );
			setState(70);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CourseContext extends ParserRuleContext {
		public CourseIDContext courseID() {
			return getRuleContext(CourseIDContext.class,0);
		}
		public CourseNameContext courseName() {
			return getRuleContext(CourseNameContext.class,0);
		}
		public CapacityContext capacity() {
			return getRuleContext(CapacityContext.class,0);
		}
		public FacilitiesContext facilities() {
			return getRuleContext(FacilitiesContext.class,0);
		}
		public LecturerIDContext lecturerID() {
			return getRuleContext(LecturerIDContext.class,0);
		}
		public CourseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_course; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterCourse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitCourse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitCourse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CourseContext course() throws RecognitionException {
		CourseContext _localctx = new CourseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_course);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__2);
			setState(73);
			courseID();
			setState(74);
			match(T__3);
			setState(75);
			courseName();
			setState(76);
			match(T__3);
			setState(77);
			capacity();
			setState(78);
			match(T__3);
			setState(79);
			facilities();
			setState(80);
			match(T__3);
			setState(81);
			lecturerID();
			setState(82);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CourseIDContext extends ParserRuleContext {
		public TerminalNode ALPHANUMERIC() { return getToken(ClassSchedulingParser.ALPHANUMERIC, 0); }
		public CourseIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_courseID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterCourseID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitCourseID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitCourseID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CourseIDContext courseID() throws RecognitionException {
		CourseIDContext _localctx = new CourseIDContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_courseID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ALPHANUMERIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CourseNameContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(ClassSchedulingParser.WORD, 0); }
		public CourseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_courseName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterCourseName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitCourseName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitCourseName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CourseNameContext courseName() throws RecognitionException {
		CourseNameContext _localctx = new CourseNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_courseName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LecturerIDContext extends ParserRuleContext {
		public TerminalNode NUMERIC() { return getToken(ClassSchedulingParser.NUMERIC, 0); }
		public LecturerIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lecturerID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterLecturerID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitLecturerID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitLecturerID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LecturerIDContext lecturerID() throws RecognitionException {
		LecturerIDContext _localctx = new LecturerIDContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lecturerID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(NUMERIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LecturerNameContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(ClassSchedulingParser.WORD, 0); }
		public LecturerNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lecturerName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterLecturerName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitLecturerName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitLecturerName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LecturerNameContext lecturerName() throws RecognitionException {
		LecturerNameContext _localctx = new LecturerNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lecturerName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateLecturerContext extends ParserRuleContext {
		public List<TerminalNode> ENTER() { return getTokens(ClassSchedulingParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(ClassSchedulingParser.ENTER, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(ClassSchedulingParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(ClassSchedulingParser.WHITESPACE, i);
		}
		public List<LecturerContext> lecturer() {
			return getRuleContexts(LecturerContext.class);
		}
		public LecturerContext lecturer(int i) {
			return getRuleContext(LecturerContext.class,i);
		}
		public CreateLecturerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createLecturer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterCreateLecturer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitCreateLecturer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitCreateLecturer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateLecturerContext createLecturer() throws RecognitionException {
		CreateLecturerContext _localctx = new CreateLecturerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_createLecturer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__5);
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				match(ENTER);
				setState(94);
				match(WHITESPACE);
				setState(95);
				lecturer();
				setState(97);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(96);
					match(ENTER);
					}
					break;
				}
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENTER );
			setState(103);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LecturerContext extends ParserRuleContext {
		public LecturerIDContext lecturerID() {
			return getRuleContext(LecturerIDContext.class,0);
		}
		public LecturerNameContext lecturerName() {
			return getRuleContext(LecturerNameContext.class,0);
		}
		public PreferenceContext preference() {
			return getRuleContext(PreferenceContext.class,0);
		}
		public LecturerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lecturer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterLecturer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitLecturer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitLecturer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LecturerContext lecturer() throws RecognitionException {
		LecturerContext _localctx = new LecturerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lecturer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__2);
			setState(106);
			lecturerID();
			setState(107);
			match(T__3);
			setState(108);
			lecturerName();
			setState(109);
			match(T__3);
			setState(110);
			preference();
			setState(111);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreferenceContext extends ParserRuleContext {
		public List<DaytimeContext> daytime() {
			return getRuleContexts(DaytimeContext.class);
		}
		public DaytimeContext daytime(int i) {
			return getRuleContext(DaytimeContext.class,i);
		}
		public PreferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterPreference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitPreference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitPreference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreferenceContext preference() throws RecognitionException {
		PreferenceContext _localctx = new PreferenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_preference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__6);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(114);
				daytime();
				}
			}

			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(117);
					match(T__3);
					setState(118);
					daytime();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(126);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DaytimeContext extends ParserRuleContext {
		public DayContext day() {
			return getRuleContext(DayContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(ClassSchedulingParser.WHITESPACE, 0); }
		public TimesContext times() {
			return getRuleContext(TimesContext.class,0);
		}
		public DaytimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_daytime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterDaytime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitDaytime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitDaytime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DaytimeContext daytime() throws RecognitionException {
		DaytimeContext _localctx = new DaytimeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_daytime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			day();
			setState(129);
			match(WHITESPACE);
			setState(130);
			times();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DayContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(ClassSchedulingParser.WORD, 0); }
		public DayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_day; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitDay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitDay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DayContext day() throws RecognitionException {
		DayContext _localctx = new DayContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_day);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimesContext extends ParserRuleContext {
		public List<TimeContext> time() {
			return getRuleContexts(TimeContext.class);
		}
		public TimeContext time(int i) {
			return getRuleContext(TimeContext.class,i);
		}
		public TimesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_times; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterTimes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitTimes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitTimes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimesContext times() throws RecognitionException {
		TimesContext _localctx = new TimesContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_times);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__2);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DIGIT || _la==NUMERIC) {
				{
				setState(135);
				time();
				}
			}

			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(138);
					match(T__3);
					setState(139);
					time();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(147);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public ToContext to() {
			return getRuleContext(ToContext.class,0);
		}
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassSchedulingListener ) ((ClassSchedulingListener)listener).exitTime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClassSchedulingVisitor ) return ((ClassSchedulingVisitor<? extends T>)visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			from();
			setState(150);
			match(T__8);
			setState(151);
			to();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
